api consertada
